fix errors on unique constrains on shop, improve shop creation flow
